[package]
name = "skyline_smash"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[lib]
name = "smash"

[dependencies]
libc = { git = "https://github.com/ultimate-research/libc-nnsdk" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
lazy_static = "1.4"
compile-time-lua-bind-hash = "1.1"
paste = "1.0"

[features]
default = [ "std" ]
std = []
params_internal = []
