[package]
name = "skyline_smash"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for helping mod Smash Ultimate using skyline-rs"

[lib]
name = "smash"

[dependencies]
libc-nnsdk = "0.2.0"
nnsdk = "0.2.0"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
lazy_static = "1.4.0"
compile-time-lua-bind-hash = "1.1"
paste = "1.0"

[features]
default = [ "std" ]
std = []
params_internal = []
weak_l2cvalue = []
